<resources>
    <string name="app_name">EpamTraining</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="profileItem">Profile</string>
    <string name="trainingsItem">Trainings</string>
    <string name="postsItem">Posts</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUpLinkText">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="apply">Apply</string>
    <string name="sets">Sets</string>
    <string name="burned">Burned</string>
    <string name="parameters">Parameters</string>
    <string name="breakfast">Breakfast</string>
    <string name="calories">Calories</string>
    <string name="needed">Needed</string>
    <string name="product">Product</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="nutrition">Nutrition</string>
    <string name="total_calories">Total calories:</string>
    <string name="training_type">Type</string>
    <string name="number_of_exercises">Number of exercises</string>
    <string name="all_trainings">All</string>
    <string name="favourite_trainings">Favourite</string>
    <string name="exercises">Exercises</string>
    <string name="repeats">Repeats</string>

    <array name="tab_trainings_title">
        <item>@string/all_trainings</item>
        <item>@string/favourite_trainings</item>
    </array>

    <array name="genders">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="tab_title">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
    </array>

</resources>
