<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profileItem" />

        <item
            android:id="@+id/drawerNutrition"
            android:icon="@drawable/ic_nutrition"
            android:title="@string/nutrition" />

        <item
            android:id="@+id/drawerTrainingsList"
            android:icon="@drawable/ic_trainings_list"
            android:title="@string/trainingsItem" />
        <item
            android:id="@+id/drawerPosts"
            android:icon="@drawable/ic_users"
            android:title="@string/postsItem" />
        <item
            android:id="@+id/drawerLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>